# smart-admin

./: .gitattributes  .gitignore  AGENT.md  BAK_AGENT.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260507_1420_793a7f0506cb_baseline.py  20260507_1426_a5b753a74244_policy_knowledge_file_and_policy_chunk.py  20260507_1510_ce50f0d6aab5_document_template_and_draft_tables.py  20260507_1526_4caea19d397c_visitor_employee_and_visitor_record_.py  20260507_1559_ed4fd74c6ed5_event_plan_and_run_tables.py  20260515_1810_add_event_plan_options.py
backend/app/: main.py
backend/app/ai/: ark.py
backend/app/ai/chains/: policy_rag.py
backend/app/ai/graphs/: doc_reflective.py  event_planner.py  policy_rag.py
backend/app/ai/loaders/: markdown.py
backend/app/ai/tools/: tavily_search.py
backend/app/api/: deps.py
backend/app/cache/: redis.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  document.py  event.py  policy.py  visitor.py
backend/app/repositories/: document.py  event.py  policy.py  visitor.py
backend/app/schemas/: document.py  event.py  policy.py  visitor.py
backend/app/services/: document_service.py  event_service.py  policy_service.py  visitor_service.py
backend/scripts/: entrypoint.sh  make_test_card.py  probe_ark_multimodal_embed.py  probe_markdown_loader.py  probe_policy_ingest.py  sample_policy.md  seed_document.py  seed_policy.py  test_event_plan.json
(+42 files in other folders)
