[project]
name = "smart-admin-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "pgvector>=0.3,<0.4",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.0",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.27",
    "redis>=5",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "tavily-python>=0.7.24",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
